--- a/htmpass.html
+++ b/htmpass.html
@@ -71,6 +71,10 @@
         </a>
         <br>
         <br>
+        <a href="https://masmo-ontwerp.webnode.nl/"></a>
+            <button style="border: black;">Naar de website</button>
+        <br>
+        <br>
         <button onclick="logout()">Uitloggen</button>
     </div>
 
